--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "project_2",
+  "name": "1-Passport-Example",
   "version": "1.0.0",
-  "description": "TBD",
+  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "lint": "./node_modules/.bin/eslint **/*.js"
+    "watch": "nodemon server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Keegawho198/Project_2.git"
-  },
-  "author": "someone",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Keegawho198/Project_2/issues"
-  },
-  "homepage": "https://github.com/Keegawho198/Project_2#readme"
+  "dependencies": {
+    "bcryptjs": "2.4.3",
+    "express": "^4.17.0",
+    "express-session": "^1.16.1",
+    "mysql2": "^1.6.5",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.8.6"
+  }
 }
