--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ cache:
   directories:
     - node_modules
 before_install:
-  - mysql -e 'CREATE DATABASE bigWalletDB;'
+  # - mysql -e 'CREATE DATABASE bigWalletDB;'
 script:
   - npm run lint
   - npm run build
