--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "TBD",
   "main": "server.js",
   "scripts": {
-    // "test": "jest",
     "start": "node server.js",
     "lint": "eslint **/*.js --quiet"
   },
@@ -25,7 +24,6 @@
     "express-flash": "0.0.2",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
-    "jest": "^25.1.0",
     "method-override": "^3.0.0",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
@@ -33,6 +31,8 @@
     "sequelize": "^5.21.3"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "jest": "^25.1.0"
+
   }
 }
