--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 node_js: "12"
-branches:
-  only:
-    - master
-cache:
-  directories:
-    - node_modules
+# branches:
+#   only:
+#     - master
+# cache:
+#   directories:
+#     - node_modules
 # before_install:
 #   - mysql -e 'CREATE DATABASE IF NOT EXISTS bigwalletdb;'
   
