--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "sequelize": "^5.21.3"
+  },
+  "devDependencies": {
+    "jest": "^25.1.0"
   }
 }
