--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ services:
 before_install:
   - mysql -e 'CREATE DATABASE testdb;'
 script:
-  - npm run build
+  # - npm run build
   # - npm run lint
   # - npm test
