--- a/package.json
+++ b/package.json
@@ -4,112 +4,22 @@
   "description": "",
   "main": "server.js",
   "dependencies": {
-    "ansi-styles": "^4.2.1",
     "bcrypt": "^3.0.6",
-    "bluebird": "^3.7.2",
-    "brace-expansion": "^1.1.11",
-    "browser-process-hrtime": "^0.1.3",
-    "browser-resolve": "^1.11.3",
-    "buffer-from": "^1.1.1",
-    "bytes": "^3.1.0",
-    "callsites": "^3.1.0",
-    "camelcase": "^5.3.1",
-    "caseless": "^0.12.0",
-    "chownr": "^1.1.3",
-    "ci-info": "^2.0.0",
-    "co": "^4.6.0",
-    "code-point-at": "^1.1.0",
-    "collect-v8-coverage": "^1.0.0",
-    "color-convert": "^2.0.1",
-    "color-name": "^1.1.4",
-    "combined-stream": "^1.0.8",
-    "commander": "^2.20.3",
-    "component-emitter": "^1.3.0",
-    "concat-map": "^0.0.1",
-    "connect-flash": "^0.1.1",
-    "console-control-strings": "^1.1.0",
-    "content-type": "^1.0.4",
-    "cookie-signature": "^1.0.6",
-    "copy-descriptor": "^0.1.1",
-    "core-util-is": "^1.0.2",
-    "cookie": "^0.4.0",
-    "cssom": "^0.4.4",
-    "cssstyle": "^2.2.0",
-    "dashdash": "^1.14.1",
-    "decamelize": "^1.2.0",
-    "decode-uri-component": "^0.2.0",
-    "deep-extend": "^0.6.0",
-    "deep-is": "^0.1.3",
-    "delayed-stream": "^1.0.0",
-    "delegates": "^1.0.0",
-    "denque": "^1.4.1",
-    "depd": "^1.1.2",
-    "destroy": "^1.0.4",
-    "detect-newline": "^3.1.0",
-    "detect-libc": "^1.0.3",
-    "diff-sequences": "^25.1.0",
-    "dottie": "^2.0.2",
-    "ee-first": "^1.1.1",
-    "emoji-regex": "^8.0.0",
-    "encodeurl": "^1.0.2",
-    "escape-html": "^1.0.3",
-    "escape-string-regexp": "^1.0.5",
+    "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
-    "esprima": "^4.0.1",
-    "estraverse": "^4.3.0",
-    "esutils": "^2.0.3",
-    "exec-sh": "^0.3.4",
-    "etag": "^1.8.1",
-    "exit": "^0.1.2",
     "express": "^4.17.1",
-    "extend": "^3.0.2",
-    "extsprintf": "^1.3.0",
-    "fast-deep-equal": "^3.1.1",
-    "fast-json-stable-stringify": "^2.1.0",
-    "fast-levenshtein": "^2.0.6",
-    "for-in": "^1.0.2",
-    "forever-agent": "^0.6.1",
-    "forwarded": "^0.1.2",
-    "fresh": "^0.5.2",
-    "fs.realpath": "^1.0.0",
-    "fsevents": "^2.1.2",
-    "function-bind": "^1.1.1",
-    "generate-function": "^2.3.1",
-    "gensync": "^1.0.0-beta.1",
-    "get-caller-file": "^2.0.5",
-    "get-value": "^2.0.6",
-    "getpass": "^0.1.7",
-    "graceful-fs": "^4.2.3",
-    "growly": "^1.3.0",
-    "har-schema": "^2.0.0",
-    "has": "^1.0.3",
-    "has-flag": "^4.0.0",
-    "has-symbols": "^1.0.1",
-    "has-unicode": "^2.0.1",
-    "has-values": "^1.0.0",
-    "html-escaper": "^2.0.0",
-    "human-signals": "^1.1.1",
-    "imurmurhash": "^0.1.4",
-    "inflection": "^1.12.0",
-    "ini": "^1.3.5",
-    "ip-regex": "^2.1.0",
-    "ipaddr.js": "^1.9.0",
-    "is-accessor-descriptor": "^0.1.6",
-    "is-bluebird": "^1.0.2",
-    "is-buffer": "^1.1.6",
-    "is-callable": "^1.1.5",
-    "is-ci": "^2.0.0",
-    "is-data-descriptor": "^0.1.4",
-    "is-date-object": "^1.0.2",
-    "is-descriptor": "^0.1.6",
-    "is-extendable": "^0.1.1",
-    "is-generator-fn": "^2.1.0",
-    "is-number": "^7.0.0",
-    "is-property": "^1.0.2",
-    "is-regex": "^1.0.5",
-    "is-stream": "^1.1.0"
+    "express-flash": "0.0.2",
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
+    "method-override": "^3.0.0",
+    "mysql2": "^2.1.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.21.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^25.1.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
