--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
   "name": "project_2",
   "version": "1.0.0",
-  "description": "",
+  "description": "TBD",
   "main": "server.js",
+  "scripts": {
+    "start": "node server.js",
+    "lint": "eslint --quiet"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Keegawho198/Project_2.git"
+  },
+  "author": "someone",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Keegawho198/Project_2/issues"
+  },
+  "homepage": "https://github.com/Keegawho198/Project_2#readme",
   "dependencies": {
     "bcrypt": "^3.0.6",
     "dotenv": "^8.2.0",
@@ -19,19 +33,5 @@
   },
   "devDependencies": {
     "jest": "^25.1.0"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Keegawho198/Project_2.git"
-  },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Keegawho198/Project_2/issues"
-  },
-  "homepage": "https://github.com/Keegawho198/Project_2#readme"
+  }
 }
