--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,11 @@
 {
-    "root": true,
-
-    "parserOptions": {
-        "ecmaVersion": 6
+    "env": {
+        "browser": true,
+        "commonjs": true,
+        "node": true
     },
-
-    "extends": "eslint:recommended"
-}
+    "rules": {
+        
+    }
+  }
+  
