adding code to connect to heroku

--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
   "development": {
-    "username": "root",
-    "password": "cisco123",
-    "database": "bigWalletDB",
-    "host": "127.0.0.1",
+    "username": "aw8a610d32km6ght",
+    "password": "xbqnbubqozkmbbhq",
+    "database": "vk1v9g5hcuox5o0o",
+    "host": "k2fqe1if4c7uowsh.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
     "dialect": "mysql",
     "operatorsAliases": false
   },
