--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jest": "^25.1.0",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
+    "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
