--- a/config/config.json
+++ b/config/config.json
@@ -18,7 +18,7 @@
   "development": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "bigwalletdb",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": false
